--- a/package.toml
+++ b/package.toml
@@ -1,8 +1,9 @@
 name = "db"
-version = "0.15.0"
+version = "0.16.0"
 authors = ["weiwenhao <wwhacker@qq.com>"]
 license = "MIT"
 type = "lib"
+nature = "0.7.2"
 
 [links]
 
